# django_2.2_pet

./: .env  .gitignore  README.txt  docker-compose.yml  pyproject.toml
docker/: Dockerfile  server.sh
server/: settings.py  urls.py
server/apps/main/admin/: __init__.py  order.py  payment.py  product.py
server/apps/main/admin/inlines/: __init__.py  order_product.py
server/apps/main/api/: urls.py
server/apps/main/api/order/: serializers.py  urls.py
server/apps/main/api/order/views/: create.py
server/apps/main/api/payment/: serializers.py  urls.py
server/apps/main/api/payment/views/: create.py
server/apps/main/api/product/: filters.py  serializers.py  urls.py
server/apps/main/api/product/views/: list.py
server/apps/main/constants/: order.py  payment.py  product.py
server/apps/main/migrations/: 0001_initial.py
server/apps/main/models/: __init__.py  order.py  order_products.py  payment.py  product.py
